--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://176.119.157.113
+NEXT_PUBLIC_API_URL=https://worklance.online
 SESSION_SECRET='V^D*Q7G_*5Exy^9=eFd.y=6r0D=HQG}dBF5@}~GeAAYLkAEg)Rm!2WD@XGW4AMy%H%)oA3s^Hxi?4+~5:Z-+a_!#_xWh>D>d?u5%'
